import React from 'react';
import '@testing-library/jest-dom';
import { shallow } from 'enzyme';
import { GifExpertApp } from '../GifExpertApp';


describe('Pruebas en GifExpertApp', () => {
   
    test('debe mostrar <GifExpertApp /> correctamente', () => {
       
        const wrapper = shallow(<GifExpertApp />);

        expect(wrapper).toMatchSnapshot();
    });
    
    test('debe de mostar una lista de categorias', () => {
        const categorias = ['Hola', 'Adios'];
        const wrapper = shallow(<GifExpertApp defaultCategories = {categorias}/>);
        
        expect(wrapper).toMatchSnapshot();
        expect(wrapper.find('GifGrid').length).toBe(categorias.length);
    });
    
});
